...
        PadKey(SELECT, "选择", style = KeyStyle.CHAR),
        PadKey(RIGHT, icon = R.drawable.ic_chevron_right, style = KeyStyle.CHAR).apply { repeat = true },
        PadKey(SELECT_ALL, "全选"),
        PadKey(HOME, "开头"),
        PadKey(DOWN, icon = R.drawable.ic_chevron_down, style = KeyStyle.CHAR).apply { repeat = true },
        PadKey(END, "末尾"),
        PadKey(BACK, "返回", style = KeyStyle.ACCENT),
    )

    init {
        pad.keys = keys
        pad.layouter = { w, h ->
            val m = kb.metrics
...
